--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@ TP1/bin/test_dom/*.o
 TP1/bin/test_ent/*.o
 TP1/bin/entidades/*.o
 TP1/bin/view/*.o
+TP1/bin/view/*/*.o
 teste
 doxygen/*
 TP1/codeblocks/*
